<resources>
    <string name="app_name" translatable="false">DownloadLibrary</string>

    <string name="download_apk_title">下载更新</string>
    <string name="download_apk_downloading">下载完成%1$s</string>
    <string name="download_apk_completed">下载完成</string>
    <string name="download_apk_dialog_title">提示</string>
    <string name="download_apk_dialog_info_new_version_update">发现新版本，是否升级</string>
    <string name="download_apk_alert_button_confirm">立即更新</string>
    <string name="download_apk_alert_button_cancel">以后再说</string>
    <string name="download_apk_alert_title">发现新版本</string>
    <string name="download_apk_alert_latest_version">最新版本： %1$s</string>
    <string name="download_apk_alert_latest_version_size">新版本大小： %1$sM</string>
    <string name="download_apk_alert_update_info">更新内容\n%1$s</string>
    <string name="download_apk_toast_is_latest">已经是最新版本</string>
    <string name="download_apk_toast_checking">正在检查更新...</string>
    <string name="download_apk_toast_is_downloading">新版本正在下载</string>
    <string name="download_apk_toast_apk_error">新版本下载错误，请重新启动万视达下载新版本</string>
    <string name="download_apk_ignore_this_version">不再显示</string>
</resources>
